<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heroes of the Storm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="News">News</string>
    <string name="Heroes">Helden</string>
    <string name="Battlefield">Schlachtfelder</string>
    <string name="Strategy">Strategien</string>
    <string name="Platzhalter">Platzhalter</string>

</resources>
