<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame"
    android:background="@drawable/iphone" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Strategy"
        android:id="@+id/button"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textSize="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Platzhalter"
        android:id="@+id/button2"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Platzhalter"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_alignLeft="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/News"
        android:id="@+id/button4"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_alignRight="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Heroes"
        android:id="@+id/button5"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_alignTop="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Battlefield"
        android:id="@+id/button6"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:textSize="15dp" />
</RelativeLayout>
